--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "react-dev": "webpack -d --watch",
     "test": "jest",
-    "server-dev": "nodemon server/index.js"
+    "server-dev": "nodemon server/server.js"
   },
   "jest": {
     "transform": {
@@ -61,6 +61,8 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
-    "regenerator-runtime": "^0.11.1"
+    "regenerator-runtime": "^0.11.1",
+    "superagent": "^3.8.2",
+    "supertest": "^3.0.0"
   }
 }
