--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "popper.js": "^1.14.3",
     "react-big-calendar": "^0.19.0",
     "react-bootstrap": "^0.32.1",
+    "react-datetime": "^2.14.0",
     "react-dom": "^16.3.1",
     "react-router-dom": "^4.2.2",
     "regenerator-runtime": "^0.11.1",
